@@ -4,6 +4,7 @@ Revision history for {{$dist->name}}
   - New recursive option
   - The experimental _r option will be keept beiefly then removed
   - The lib option allows '*' to match any library
+  - New systempath option
 
 0.10      2015-02-12 18:52:54 -0500
   - Add experimental and undocumented _r option intended for use
